# fib-li

./: .gitignore  CMakeLists.txt  README.md  SAT-alumnes.cpp  run.sh
data/: vars-100-01.cnf
horaris16/: horaris.pl
labos2/: a1.pl  a2.pl  c.pl  d.pl  tests.pl
satsolver/: TiemposPicosat.ods  resultat-1.txt  resultat-2.txt  run.sh  satsolver.cpp
